<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0FDE3"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/buenard2"
        android:gravity="center"
        android:text="@string/straydist"
        android:textColor="#333131"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/space"
        tools:layout_editor_absoluteX="0dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="3dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/keyboard_backspace_24px" />

    <ScrollView
        android:layout_width="317dp"
        android:layout_height="570dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:fontFamily="@font/lato"
                android:gravity="center"
                android:text="@string/welcometv"
                android:textColor="#22577A"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/overview"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:fontFamily="@font/open_sans_light"
                android:includeFontPadding="true"
                android:text="@string/overviewtext"
                android:textColor="#E6000000"
                android:textSize="25sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="27dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/_89289" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView99"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/feature1"
                    android:textColor="#E6000000"
                    android:textSize="20sp" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="24dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/_89289" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/distancetext"
                    android:textColor="#E6000000"
                    android:textSize="20sp" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="53dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/_89289" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/notified"
                    android:textColor="#E6000000"
                    android:textSize="20sp" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/HowItWorks"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="660dp"
                android:fontFamily="@font/open_sans_light"
                android:includeFontPadding="true"
                android:text="@string/works"
                android:textColor="#E6000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/madeby" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>